@@ -1,10 +1,11 @@
 package com.cartethyia.easyorange.admin.service;
 
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.conditions.query.LambdaQueryChainWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.baomidou.mybatisplus.extension.toolkit.ChainWrappers;
 import com.cartethyia.easyorange.admin.dto.request.AdminReviewDeleteRequest;
 import com.cartethyia.easyorange.admin.dto.request.AdminReviewQueryRequest;
-import com.cartethyia.easyorange.admin.dto.response.AdminReviewVO;
+import com.cartethyia.easyorange.admin.dto.response.AdminReviewResponse;
 import com.cartethyia.easyorange.common.exception.BusinessException;
 import com.cartethyia.easyorange.common.result.PageResult;
 import com.cartethyia.easyorange.framework.util.SecurityContextUtil;
@@ -20,7 +21,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -36,14 +36,14 @@ public class AdminReviewService {
     private final UserMapper userMapper;
 
     @Transactional(readOnly = true)
-    public PageResult<AdminReviewVO> listReviews(AdminReviewQueryRequest request) {
+    public PageResult<AdminReviewResponse> listReviews(AdminReviewQueryRequest request) {
         int pageNum = request.getPageNum() != null ? request.getPageNum() : 1;
         int pageSize = request.getPageSize() != null ? request.getPageSize() : 20;
 
         Page<ProductReviewDO> page = new Page<>(pageNum, pageSize);
-        LambdaQueryWrapper<ProductReviewDO> wrapper = buildQueryWrapper(request);
+        var wrapper = buildQueryWrapper(request);
 
-        Page<ProductReviewDO> reviewPage = reviewMapper.selectPage(page, wrapper);
+        Page<ProductReviewDO> reviewPage = wrapper.page(page);
 
         if (reviewPage.getRecords().isEmpty()) {
             return PageResult.empty(pageNum, pageSize);
@@ -52,15 +52,15 @@ public class AdminReviewService {
         Map<Long, ProductDO> productMap = batchGetProducts(reviewPage.getRecords());
         Map<Long, UserEntity> userMap = batchGetUsers(reviewPage.getRecords());
 
-        List<AdminReviewVO> records = reviewPage.getRecords().stream()
-            .map(r -> toAdminReviewVO(r, productMap, userMap))
+        List<AdminReviewResponse> records = reviewPage.getRecords().stream()
+            .map(r -> toAdminReviewResponse(r, productMap, userMap))
             .collect(Collectors.toList());
 
         return PageResult.of(records, reviewPage.getTotal(), pageNum, pageSize);
     }
 
     @Transactional(readOnly = true)
-    public AdminReviewVO getReviewDetail(Long id) {
+    public AdminReviewResponse getReviewDetail(Long id) {
         ProductReviewDO review = reviewMapper.selectById(id);
         if (review == null || review.getDelFlag() != 0) {
             throw BusinessException.of("评价不存在");
@@ -69,7 +69,7 @@ public class AdminReviewService {
         Map<Long, ProductDO> productMap = batchGetProducts(List.of(review));
         Map<Long, UserEntity> userMap = batchGetUsers(List.of(review));
 
-        return toAdminReviewVO(review, productMap, userMap);
+        return toAdminReviewResponse(review, productMap, userMap);
     }
 
     @Transactional(rollbackFor = Exception.class)
@@ -86,9 +86,9 @@ public class AdminReviewService {
             id, operatorId, request.getReason());
     }
 
-    private LambdaQueryWrapper<ProductReviewDO> buildQueryWrapper(AdminReviewQueryRequest request) {
-        LambdaQueryWrapper<ProductReviewDO> wrapper = new LambdaQueryWrapper<>();
-        wrapper.eq(ProductReviewDO::getDelFlag, 0);
+    private LambdaQueryChainWrapper<ProductReviewDO> buildQueryWrapper(AdminReviewQueryRequest request) {
+        var wrapper = ChainWrappers.lambdaQueryChain(reviewMapper)
+            .eq(ProductReviewDO::getDelFlag, 0);
 
         if (request.getProductId() != null) {
             wrapper.eq(ProductReviewDO::getProductId, request.getProductId());
@@ -116,7 +116,7 @@ public class AdminReviewService {
         return wrapper;
     }
 
-    private AdminReviewVO toAdminReviewVO(
+    private AdminReviewResponse toAdminReviewResponse(
         ProductReviewDO review,
         Map<Long, ProductDO> productMap,
         Map<Long, UserEntity> userMap
@@ -124,12 +124,12 @@ public class AdminReviewService {
         ProductDO product = productMap.get(review.getProductId());
         UserEntity user = userMap.get(review.getUserId());
 
-        return AdminReviewVO.builder()
+        return AdminReviewResponse.builder()
             .reviewId(review.getId())
             .productId(review.getProductId())
             .productName(product != null ? product.getName() : null)
             .userId(review.getUserId())
-            .username(user != null ? user.getNickName() != null ? user.getNickName() : user.getUsername() : null)
+            .username(resolveUsername(user))
             .userAvatar(user != null ? user.getAvatar() : null)
             .rating(review.getRating())
             .content(review.getContent())
@@ -141,12 +141,19 @@ public class AdminReviewService {
             .build();
     }
 
+    private String resolveUsername(UserEntity user) {
+        if (user == null) {
+            return null;
+        }
+        return user.getNickName() != null ? user.getNickName() : user.getUsername();
+    }
+
     private Map<Long, ProductDO> batchGetProducts(List<ProductReviewDO> reviews) {
         Set<Long> productIds = reviews.stream()
             .map(ProductReviewDO::getProductId)
             .collect(Collectors.toSet());
         if (productIds.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
         List<ProductDO> products = productMapper.selectBatchIds(productIds);
         return products.stream().collect(Collectors.toMap(ProductDO::getId, p -> p, (a, b) -> a));
@@ -157,7 +164,7 @@ public class AdminReviewService {
             .map(ProductReviewDO::getUserId)
             .collect(Collectors.toSet());
         if (userIds.isEmpty()) {
-            return Collections.emptyMap();
+            return Map.of();
         }
         List<UserEntity> users = userMapper.selectBatchIds(userIds);
         return users.stream().collect(Collectors.toMap(UserEntity::getId, u -> u, (a, b) -> a));
