@@ -25,7 +25,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -172,7 +171,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 new SimpleGrantedAuthority("ROLE_USER")
             );
         }
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     private String resolveToken(HttpServletRequest request) {
