@@ -12,11 +12,10 @@ import com.cartethyia.easyorange.product.adapter.outbound.persistence.dataobject
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.ProductDetailMapper;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.ProductImageMapper;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.ProductMapper;
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.toolkit.ChainWrappers;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -49,11 +48,10 @@ public class ProductRepositoryImpl implements ProductRepository {
             return Optional.empty();
         }
         ProductDetailDO detailDO = productDetailMapper.selectById(productDO.getId());
-        List<ProductImageDO> imageDOs = productImageMapper.selectList(
-                new LambdaQueryWrapper<ProductImageDO>()
-                        .eq(ProductImageDO::getProductId, productDO.getId())
-                        .orderByAsc(ProductImageDO::getSortOrder)
-        );
+        List<ProductImageDO> imageDOs = ChainWrappers.lambdaQueryChain(productImageMapper)
+                .eq(ProductImageDO::getProductId, productDO.getId())
+                .orderByAsc(ProductImageDO::getSortOrder)
+                .list();
         return Optional.of(converter.toDomain(productDO, detailDO, imageDOs));
     }
 
@@ -72,11 +70,10 @@ public class ProductRepositoryImpl implements ProductRepository {
 
     @Override
     public List<Product> findBySellerId(SellerId sellerId) {
-        List<ProductDO> productDOs = productMapper.selectList(
-                new LambdaQueryWrapper<ProductDO>()
-                        .eq(ProductDO::getUserId, sellerId.value())
-                        .orderByDesc(ProductDO::getCreateTime)
-        );
+        List<ProductDO> productDOs = ChainWrappers.lambdaQueryChain(productMapper)
+                .eq(ProductDO::getUserId, sellerId.value())
+                .orderByDesc(ProductDO::getCreateTime)
+                .list();
         if (productDOs.isEmpty()) {
             return List.of();
         }
@@ -92,17 +89,16 @@ public class ProductRepositoryImpl implements ProductRepository {
                 .selectDetailsByProductIds(productIds).stream()
                 .collect(Collectors.toMap(ProductDetailDO::getProductId, d -> d, (a, b) -> a));
 
-        Map<Long, List<ProductImageDO>> imagesByProduct = productImageMapper.selectList(
-                new LambdaQueryWrapper<ProductImageDO>()
-                        .in(ProductImageDO::getProductId, productIds)
-                        .orderByAsc(ProductImageDO::getSortOrder)
-        ).stream().collect(Collectors.groupingBy(ProductImageDO::getProductId));
+        Map<Long, List<ProductImageDO>> imagesByProduct = ChainWrappers.lambdaQueryChain(productImageMapper)
+                .in(ProductImageDO::getProductId, productIds)
+                .orderByAsc(ProductImageDO::getSortOrder)
+                .list().stream().collect(Collectors.groupingBy(ProductImageDO::getProductId));
 
         return productDOs.stream()
                 .map(productDO -> converter.toDomain(
                         productDO,
                         detailMap.get(productDO.getId()),
-                        imagesByProduct.getOrDefault(productDO.getId(), Collections.emptyList())
+                        imagesByProduct.getOrDefault(productDO.getId(), List.of())
                 ))
                 .collect(Collectors.toList());
     }
@@ -126,30 +122,31 @@ public class ProductRepositoryImpl implements ProductRepository {
 
     @Override
     public void update(Product product) {
-        ProductDO productDO = converter.toDataObject(product);
-        productMapper.updateById(productDO);
-
-        ProductDetailDO existingDetail = productDetailMapper.selectById(product.getId().value());
-        ProductDetailDO detailDO = converter.toDetailDO(product.getId(), product.getDescription());
-        if (detailDO != null) {
-            if (existingDetail != null) {
-                existingDetail.setDescription(detailDO.getDescription());
-                productDetailMapper.updateById(existingDetail);
-            } else {
-                productDetailMapper.insert(detailDO);
-            }
-        }
-
+        productMapper.updateById(converter.toDataObject(product));
+        updateProductDetail(product);
         updateImagesDifferentially(product);
+    }
+
+    private void updateProductDetail(Product product) {
+        ProductDetailDO detailDO = converter.toDetailDO(product.getId(), product.getDescription());
+        if (detailDO == null) {
+            return;
+        }
+        ProductDetailDO existingDetail = productDetailMapper.selectById(product.getId().value());
+        if (existingDetail != null) {
+            existingDetail.setDescription(detailDO.getDescription());
+            productDetailMapper.updateById(existingDetail);
+        } else {
+            productDetailMapper.insert(detailDO);
+        }
     }
 
     private void updateImagesDifferentially(Product product) {
         Long productId = product.getId().value();
 
-        List<ProductImageDO> existingImages = productImageMapper.selectList(
-                new LambdaQueryWrapper<ProductImageDO>()
-                        .eq(ProductImageDO::getProductId, productId)
-        );
+        List<ProductImageDO> existingImages = ChainWrappers.lambdaQueryChain(productImageMapper)
+                .eq(ProductImageDO::getProductId, productId)
+                .list();
 
         List<ProductImageDO> newImages = converter.toImageDOs(product.getId(), product.getImages());
 
@@ -164,18 +161,18 @@ public class ProductRepositoryImpl implements ProductRepository {
         Set<String> urlsToDelete = new HashSet<>(existingUrls);
         urlsToDelete.removeAll(newUrls);
 
-        Set<String> urlsToAdd = new HashSet<>(newUrls);
-        urlsToAdd.removeAll(existingUrls);
-
         if (!urlsToDelete.isEmpty()) {
             productImageMapper.deleteByProductIdAndUrls(productId, new ArrayList<>(urlsToDelete));
         }
 
+        Set<String> urlsToAdd = new HashSet<>(newUrls);
+        urlsToAdd.removeAll(existingUrls);
+
         if (!urlsToAdd.isEmpty()) {
-            List<ProductImageDO> imagesToInsert = newImages.stream()
+            List<ProductImageDO> imagesToAdd = newImages.stream()
                     .filter(img -> urlsToAdd.contains(img.getImageUrl()))
                     .collect(Collectors.toList());
-            productImageMapper.batchInsert(imagesToInsert);
+            productImageMapper.batchInsert(imagesToAdd);
         }
     }
 
@@ -183,10 +180,9 @@ public class ProductRepositoryImpl implements ProductRepository {
     public void delete(ProductId id) {
         productMapper.deleteById(id.value());
         productDetailMapper.deleteById(id.value());
-        productImageMapper.delete(
-                new LambdaQueryWrapper<ProductImageDO>()
-                        .eq(ProductImageDO::getProductId, id.value())
-        );
+        ChainWrappers.lambdaUpdateChain(productImageMapper)
+                .eq(ProductImageDO::getProductId, id.value())
+                .remove();
     }
 
     @Override
